# KitsuneC

./: CMakeLists.txt  Kitsune-cpp.rar  main.cpp  readme.md
include/: cluster.h  featureExtractor.h  kitNET.h  netStat.h  neuralnet.h  utils.h
source/: cluster.cpp  featureExtractor.cpp  kitNET.cpp  netStat.cpp  neuralnet.cpp  utils.cpp
test/: kitsuneExample.cpp  test.h  testDense.cpp
